--- a/_drafts/-d0-ba-d0-be-d1-80-d0-be-d0-bb-d0-b5-d0-b2-d0-b0--d0-b0-d0-b1-d0-b5-d1-80-d1-80-d0-b0-d1-86-d0-b8-d0-b9.markdown
+++ b/_drafts/-d0-ba-d0-be-d1-80-d0-be-d0-bb-d0-b5-d0-b2-d0-b0--d0-b0-d0-b1-d0-b5-d1-80-d1-80-d0-b0-d1-86-d0-b8-d0-b9.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Королева аберраций.
+title: Королева аберраций
 ---
 
 В исковерканном пространстве, спящий, я к прижат земле,  
