--- a/_posts/2020-04-26-italia.markdown
+++ b/_posts/2020-04-26-italia.markdown
@@ -1,13 +1,14 @@
 ---
 layout: post
-title: Как я путешествовал по Италии, когда это ещё не звучало дико
+title: Доковидные приключения в Италии
 featured: true
 date: '2020-04-26 19:07:30'
 tags:
 - europe
-- photoblog
-image: /assets/images/2020/04/IMG_5844-2.jpg
+- travel
+image: /assets/images/2020/04/IMG_6879-1.jpg
 ---
+В 2013 году я проехал шесть итальянских городов: Рим, Флоренцию, Геную, Болонью, Верону и Венецию. Хотел продолжить тур этим летом, но теперь вместе со всей планетой сижу дома, смотрю старые фотки и вспоминаю истории.
 
 Присоединяйтесь. Слов будет мало, потому что и без них грустно.
 
@@ -15,56 +16,34 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 У каждого есть свой стереотипный Рим. Одним в голову приходит усатый повар Джузеппе, другим — легионеры в кожном полудоспехе, третьим — пробка из веспа-скутеров, четвёртым — античные руины, энным — Одри Хепбёрн и Грегори Пек. И всё это существует.
 
-
-
 ![](/assets/images/2020/04/IMG_5844-2.jpg)
 ![](/assets/images/2020/04/IMG_5957-1.jpg)
-
-
 ![](/assets/images/2020/04/IMG_5831-1.jpg)
 ![](/assets/images/2020/04/IMG_5950-1.jpg)
 
-
-
 Рим — настолько большой и концентрированный город, что в нём на самом деле помещается всё, что можно помыслить о Риме. Но из-за этого не остаётся места для сюрпризов. Когда приезжаешь сюда впервые, кажется, что ты уже знаешь город наизусть.
-
 
 ![](/assets/images/2020/04/IMG_5972-1.jpg)
 ![](/assets/images/2020/04/IMG_5974-1.jpg)
 
-
 В ноябре — дождливо. Несколько раз в день идёт ливень. Туристы разбегаются, на улице остаются только продавцы зонтов (стоят €20 и ломаются после первого раскрытия). После дождя небо затягивает плотным слоем птиц. Никогда не видел таких огромных стай.
-
 
 ![](/assets/images/2020/04/IMG_6031-2.jpg)
 ![](/assets/images/2020/04/IMG_6037-2.jpg)
 
-
 Роль музеев и галерей конвенционального искусства в Риме (как и в остальной Италии) играют базилики. А сам город — гигантская выставка архитектуры на пленэре. Есть красота на любой вкус (кроме готики, скупо представленной [одним-единственным фасадом](https://ru.wikipedia.org/wiki/Базилика_Святой_Марии_над_Минервой)).
-
-
 
 ![](/assets/images/2020/04/IMG_5906-2.jpg)
 ![](/assets/images/2020/04/IMG_6059-1.jpg)
-
-
 ![](/assets/images/2020/04/IMG_5982-1.jpg)
 ![](/assets/images/2020/04/IMG_6005-1.jpg)
 
-
-
 Все обязательные к посещению достопримечательности вы знаете. Дам рекомендацию бронировать билеты заранее и через интернет. Это дешевле и помогло мне скипнуть длинные очереди в кассы Колизея, Форума, Капитолия и Ватиканского музея.
-
-
 
 ![](/assets/images/2020/04/IMG_5869-2.jpg)
 ![](/assets/images/2020/04/IMG_6033-1.jpg)
-
-
 ![](/assets/images/2020/04/IMG_6034-1.jpg)
 ![](/assets/images/2020/04/IMG_6075-1.jpg)
-
-
 
 Другие советы: не надейтесь на светофоры и зебру. Успевайте покушать до полудня. Попробуйте весь ассортимент желатерий (мороженое). Зайдите на чудесную уличку [Via dei Coronari](https://goo.gl/maps/1qcoYvMNarEJ2sBa6). Погуляйте по [Трастевере](https://goo.gl/maps/9hkX7RqTh5FdfNLK9). Не проходите мимо острова [Тиберина](https://goo.gl/maps/jokAy3DvAb4rjqQk8).
 
@@ -72,24 +51,18 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Когда спрашиваешь у итальянца что-то в духе "How to get to Florence", получаешь в ответ лишь недоуменное молчание. Всё потому что по-итальянски город называется Firenze, и это лишь отдалённо напоминает по звучанию привычную «Флоренцию».
 
-
 ![](/assets/images/2020/04/IMG_6104-1.jpg)
 ![](/assets/images/2020/04/IMG_6184-1.jpg)
 
-
 Точно так же от реальности отличался тот образ города, который сложился в моей голове до визита. Не могу сказать, что был разочарован, но ожиданий от родины [синдрома Стендаля](https://ru.wikipedia.org/wiki/Синдром_Стендаля) было определённо больше. Город красив безумно, но не безгранично.
-
 
 ![](/assets/images/2020/04/IMG_6128-1.jpg)
 ![](/assets/images/2020/04/IMG_6138-1.jpg)
 
-
 Когда устанете от сокровищниц ренессансного искусства и утомитесь вычурностью дуомского фасада, отойдите от центра и загляните на холм с [площадью Микеланджело](https://goo.gl/maps/zP5gmnnEgCjBynrcA) — здесь вы найдёте тихие сады и прекрасный вид на колыбель европейской культуры.
-
 
 ![](/assets/images/2020/04/IMG_6173-1.jpg)
 ![](/assets/images/2020/04/IMG_6268-1.jpg)
-
 
 Спустя семь лет воспоминания о Флоренции почти выветрились. Помню прекрасную коллекцию картин во дворце Медичи, узкие улицы, рыжую черепицу, оливковые сады в городских предместьях, толкотню туристов на мосту [Понте Веккьо](https://goo.gl/maps/z2VwAhqnMQBJwFn47) и ничего больше. Даже обидно.
 
@@ -97,30 +70,20 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Город на побережье [Лигурии](https://goo.gl/maps/DqY3xMQ8GrZXoxBR6), о котором я даже не знал, напротив, приятно удивил и понравился с первого взгляда. Я заехал сюда случайно по совету кого-то из друзей. Провёл всего один день, но запомнил навсегда.
 
-
 ![](/assets/images/2020/04/IMG_6275-1.jpg)
 ![](/assets/images/2020/04/IMG_6341-1.jpg)
 
-
 Генуя — полная противоположность Флоренции. Неряшливый, грубый, эклектичный, портовый и совсем не расслабленный. Но при этом город как будто лучше тебя понимает и живёт на твоей волне.
-
-
 
 ![](/assets/images/2020/04/IMG_6314-1.jpg)
 ![](/assets/images/2020/04/IMG_6368-1.jpg)
-
-
 ![](/assets/images/2020/04/IMG_6385-1.jpg)
 ![](/assets/images/2020/04/IMG_6395-1.jpg)
 
-
-
 Когда-то давно Генуя была морской сверхдержавой, соперничала с Венецией и держала филиалы по всей Евразии — от Корсики до Крыма. Но потом пришла в упадок и стала глухой провинцией.
-
 
 ![](/assets/images/2020/04/IMG_6351-1.jpg)
 ![](/assets/images/2020/04/IMG_6419-1.jpg)
-
 
 К прошлому столетию Генуя всё же вернула себе статус самого оживлённого порта в Средиземноморье, но туристами местный музей эклектичной архитектуры под открытым небом так и не облюбован.
 
@@ -136,10 +99,8 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Из-за большого количества молодёжи тысячелетний покой города нарушают повсеместные муралы и тэги, митинги сомнительного содержания и прочие атрибуты мятежной молодости.
 
-
 ![](/assets/images/2020/04/IMG_6472-2.jpg)
 ![](/assets/images/2020/04/IMG_6482-2.jpg)
-
 
 Болонья известна кухней, невероятным количеством крытых пассажей и остатками невероятных средневековых башен. Но этого, увы, не хватило, чтобы город остался в памяти интересной дестинацией.
 
@@ -147,36 +108,22 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Пока город быстро приближался к окну поезда, я приближался к последней странице томика Ромео и Джульетта — произведения целиком вымышленного, но вымышленного в декорациях Вероны.
 
-
 ![](/assets/images/2020/04/IMG_6629-1.jpg)
 ![](/assets/images/2020/04/IMG_6660-1.jpg)
 
-
 Весь город живёт вокруг великой шекспировской пьесы. Базилика Ромео и Джульетты, дом Капулетти, Балкон Джульетты и, конечно, могила Джульетты. Хотя и без этого в городе есть что посмотреть.
-
-
 
 ![](/assets/images/2020/04/IMG_6523-1.jpg)
 ![](/assets/images/2020/04/IMG_6563-1.jpg)
-
-
 ![](/assets/images/2020/04/IMG_6618-1.jpg)
 ![](/assets/images/2020/04/IMG_6640-1.jpg)
 
-
-
 Восхитительные мосты [Ponte Pietra](https://goo.gl/maps/fMNsWoq8md5KJXt86) и [Ponte di Castelvecchio](https://goo.gl/maps/AJZoqTswWCDLBSXG9). Отлично сохранившаяся [веронская арена](https://goo.gl/maps/Upvh6dspHG1dtPkVA). Замок [Кастельвеккио](https://g.page/MuseoCastelvecchio?share). Но лучшее — вид на город с высоты [Santuario della Nostra Signora di Lourdes](https://goo.gl/maps/KwEesPrGNNK8G57a9).
-
-
 
 ![](/assets/images/2020/04/IMG_6603-1.jpg)
 ![](/assets/images/2020/04/IMG_6609-1.jpg)
-
-
 ![](/assets/images/2020/04/IMG_6512-1.jpg)
 ![](/assets/images/2020/04/IMG_6602-1.jpg)
-
-
 
 Верона — маленький городок с чудесной атмосферой. Здесь можно отдохнуть от туристического ада более популярных городов Италии. Сюда можно заехать всего на день, и этого будет достаточно.
 
@@ -188,10 +135,8 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Весь город — лабиринт ржавых стен, которые непременно кончаются жидким агрегатным состоянием. Здесь невозможно ориентироваться даже по карте. Здесь ты всегда в тени и ждёшь момента, когда на ближайшей кампе тебя наконец скупым лучом местного солнца.
 
-
 ![](/assets/images/2020/04/IMG_6745-2.jpg)
 ![](/assets/images/2020/04/IMG_6753-1.jpg)
-
 
 Здесь тебе всегда рады только 425 человек — это гондольеры, которые берут за свои услуги ровно 100 евро. Число этих людей неизменно. Если решишь вступить в их гильдию — придётся ждать чьей-то смерти или хотя бы увольнения.
 
@@ -207,23 +152,15 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Венеция познакомила меня с Иосифом Александровичем Бродским. А он, как частый посетитель и почитатель местной эстетики, познакомил меня с той Венецией, которая навсегда влилась в память самым поэтичным местом на планете.
 
-
 ![](/assets/images/2020/04/IMG_6687-1.jpg)
 ![](/assets/images/2020/04/IMG_6890-1.jpg)
 
-
 Сам Иосиф Александрович лежит неподалёку — на острове-кладбище [Сан-Микеле](https://goo.gl/maps/Vn7TUCW6v1o9UyX37), которое нельзя не посетить. Кроме Сан-Микеле можно заплыть на остров [Мурано](https://goo.gl/maps/GNNuLuB5o5To2VDz9), известный смешными штуками из стекла. И обязательно — на красочный [Бурано](https://goo.gl/maps/joqhWXEy1CsAkYJy6) за невероятной красотой.
-
-
 
 ![](/assets/images/2020/04/IMG_6765-1.jpg)
 ![](/assets/images/2020/04/IMG_6782-2.jpg)
-
-
 ![](/assets/images/2020/04/IMG_6790-2.jpg)
 ![](/assets/images/2020/04/IMG_6883-1.jpg)
-
-
 
 Венеция — город, которого не должно быть по всем законам здравого смысла. Вопреки этому, её кто-то выдумал и оставил здесь на века. Но лучше поторопиться — всё это великолепие на 118 островах может целиком уйти под воду уже в этом столетии.
 
@@ -236,4 +173,3 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 Желаю стране скорейшего выздоровления, чтобы её пьяцца и кампы снова наполнились темпераментной речью, весёлым смехом, запахом выпечки и восхищёнными вздохами. Очень надеюсь, что эта пандемия не сможет сломать то самое — незаметное и незаменимое.
 
 До скорого!
-
