--- a/_posts/2020-05-12-germania-75.markdown
+++ b/_posts/2020-05-12-germania-75.markdown
@@ -1,15 +1,17 @@
 ---
 layout: post
-title: 75 фотографий из Германии
+title: Германия в 75 кадрах
 featured: true
 date: '2020-05-12 10:40:21'
 tags:
 - europe
 - travel
-image: /assets/images/2020/05/DSCF3085.jpg
+image: /assets/images/2020/05/DSCF2908.jpg
 ---
 
-Вторая Мировая закончилась 75 лет назад. Эту страшную историю нельзя забывать. А ещё нельзя на ней зацикливаться. Сегодня я покажу 75 фото и расскажу несколько истории из своих поездок по «проигравшей стране». Сравнения и выводы — на вашей совести.
+Вторая Мировая закончилась 75 лет назад. Эту страшную историю нельзя забывать. А ещё нельзя на ней зацикливаться. Сегодня я покажу 75 фото и расскажу несколько истории из своих поездок по «проигравшей стране».
+
+Внутри — Берлин, Мюнхен, Франкфурт, Нюрнберг, Дрезден, сказочный замок Нойшванштайн и один из самых страшных концлагерей в Дахау.
 
 ## Берлин
 После первого визита в 2012 году я написал о Берлине два больших поста. Тогда столица Германии показалась грязной и враждебной, но атмосфера и артефакты новейшей истории очень впечатлили. Я привёз кучу фотографий рейхстага, Берлинской стены, муралов и мемориалов, которые до сих пор интересно пересматривать.
@@ -19,7 +21,6 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/DSCF3085.jpg)
 ![](/assets/images/2020/05/DSCF9306.jpg)
 
-
 Город довольно чётко зонирован. Есть районы, где не прекращается дикая тусовка, спокойные спальники для мидл-класса, рабочие окраины и тонна классных общественных пространств, которые объединяют этих разных персонажей без ощутимого расслоения.
 
 ![](/assets/images/2020/05/DSCF3037.jpg)
@@ -27,20 +28,19 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/DSCF3144.jpg)
 ![](/assets/images/2020/05/DSCF3135.jpg)
 
-
 В Берлине сохранилось не так много предметов древности, но их место заняла неповторимая атмосфера бывшего демаркационного города, объекты современного искусства, постоянные культурные ивенты, ощущение полной свободы и вечного творческого балагана.
 
 ![](/assets/images/2020/05/DSCF9285.jpg)
 ![](/assets/images/2020/05/DSCF9310.jpg)
 
-
 Отлично спланированная городская среда делает пешие шпацеры приятным рекреационным занятием. Берлин — огромный город, но в отличие от Москвы он не давит перегруженной транспортной системой и тиранией стеклобетонного необрутализма.
 
-![](/assets/images/2020/05/DSCF3118.jpg)Даже доставшиеся в наследство от ГДР панельные трущобы выглядят почти пасторально благодаря годной реновации, щедрому озеленению и строгому дизайн-коду. Хотя окрестности Александрплац и другие случайные места до сих пор смотрятся угрюмо и неприветливо.
+![](/assets/images/2020/05/DSCF3118.jpg)
+
+Даже доставшиеся в наследство от ГДР панельные трущобы выглядят почти пасторально благодаря годной реновации, щедрому озеленению и строгому дизайн-коду. Хотя окрестности Александрплац и другие случайные места до сих пор смотрятся угрюмо и неприветливо.
 
 ![](/assets/images/2020/05/DSCF2997.jpg)
 ![](/assets/images/2020/05/DSCF3030.jpg)
-
 
 Я убеждён, что Берлин — это город, которым может стать столица России, если её избавить от категорического императива личного автотранспорта и отдать гранитные просторы людям, которые смогут сделать их уютными и по-настоящему общественными.
 
@@ -49,33 +49,38 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/DSCF3199.jpg)
 ![](/assets/images/2020/05/DSCF9304.jpg)
 
-
 Дерзну сказать, что нынешний Берлин — это парк Горького вместе с набережной Музеона и арт-пространством, вроде Флакона. Только всё это — в масштабах целого города и с лёгким ароматом джоинта.
 
 ## Мюнхен
 Столица Баварии, родина Октоберфеста, третий миллионник страны, столица немецкого технологического сектора, самый дорогой и комфортный мегаполис в Германии. Я побывал здесь дважды — весной 2013 и летом 2018. Оба раза — с огромным удовольствием.
 
-![](/assets/images/2020/05/IMG_7581.jpg)История Мюнхена началась в VIII веке с небольшого поселения монахов, откуда и появилось название города и его легендарные пивоваренные традиции. А ещё в Мюнхене началось восхождение печально известной партии НСДАП имени австрийца Адольфа Гитлера.
+![](/assets/images/2020/05/IMG_7581.jpg)
 
-![](/assets/images/2020/05/IMG_5775.jpg)Во время Второй Мировой исторический центр города был полностью уничтожен. Однако план его восстановления был самым педантичным и консервативным, поэтому все здания и даже планировка улиц были воссозданы практически в неизменном довоенном виде.
+История Мюнхена началась в VIII веке с небольшого поселения монахов, откуда и появилось название города и его легендарные пивоваренные традиции. А ещё в Мюнхене началось восхождение печально известной партии НСДАП имени австрийца Адольфа Гитлера.
 
-![](/assets/images/2020/05/IMG_0140.jpg)Поэтому в Мюнхене, в отличие от Берлина, можно найти много интересной старой архитектуры. Город ощущается более помпезным и «европейским». До того уровня, когда вся эта меланхолическая красота погружает тебя в тихий летаргический сон.
+![](/assets/images/2020/05/IMG_5775.jpg)
+
+Во время Второй Мировой исторический центр города был полностью уничтожен. Однако план его восстановления был самым педантичным и консервативным, поэтому все здания и даже планировка улиц были воссозданы практически в неизменном довоенном виде.
+
+![](/assets/images/2020/05/IMG_0140.jpg)
+
+Поэтому в Мюнхене, в отличие от Берлина, можно найти много интересной старой архитектуры. Город ощущается более помпезным и «европейским». До того уровня, когда вся эта меланхолическая красота погружает тебя в тихий летаргический сон.
 
 ![](/assets/images/2020/05/DSCF2659.jpg)
 ![](/assets/images/2020/05/IMG_5685.jpg)
 ![](/assets/images/2020/05/IMG_5727.jpg)
 ![](/assets/images/2020/05/IMG_5673.jpg)
 
-
 В послевоенные десятилетия Мюнхен стал крупным центром науки и образования, постепенно превратился в немецкую Кремниевую долину и теперь постоянно попадает в мировую десятку городов с самым высоким качеством жизни (и в другие почётные рейтинги).
 
-![](/assets/images/2020/05/IMG_5699-1.jpg)Город стоит на реке Изар, берега которой плотно облеплены чудесными променадами с восхитительными скульптурными группами и обелисками. По Мюнхену очень приятно гулять и перемещаться на велосипеде. Автотранспорта в центре города немного.
+![](/assets/images/2020/05/IMG_5699-1.jpg)
+
+Город стоит на реке Изар, берега которой плотно облеплены чудесными променадами с восхитительными скульптурными группами и обелисками. По Мюнхену очень приятно гулять и перемещаться на велосипеде. Автотранспорта в центре города немного.
 
 Самое крутое место в городе — <a href="https://goo.gl/maps/tcSjhgkYtMhG1fds8?ref=shouldgo.me">Энглишер Гартен</a> — Английский сад. Это один из крупнейших городских парков в мире — больше нью-йоркского Централ-парка и лондонского Гайд-парка. Как и любой английский сад — это симбиоз природы и ландшафтного дизайна.
 
 ![](/assets/images/2020/05/DSCF2674.jpg)
 ![](/assets/images/2020/05/DSCF2680.jpg)
-
 
 В одном углу парка есть прекрасное кафе <a href="https://goo.gl/maps/Zorv5CJVeoWQcU9P9?ref=shouldgo.me">Milchhausl</a>, где летом наливают холодное пиво, а зимой — горячий глювайн. В другом углу — искусственная <a href="https://goo.gl/maps/o1sw2FhDVePzt2Sq7?ref=shouldgo.me">волна для сёрфинга</a> (без платы за пользование). Всё остальное — огромная поляна с живописными видами и каналами.
 
@@ -84,46 +89,51 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/IMG_0112.jpg)
 ![](/assets/images/2020/05/IMG_6962.jpg)
 
-
 Есть куча других классных мест: готичная <a href="https://goo.gl/maps/Wt51EG8KdgnoKQ7p7?ref=shouldgo.me">Мариенплац</a>, <a href="https://goo.gl/maps/kUjHoJ3yjAhZWC5FA?ref=shouldgo.me">олимпийский парк</a>, <a href="https://goo.gl/maps/UuGL7T6XhyiG7hq88?ref=shouldgo.me">музей БМВ</a>, <a href="https://goo.gl/maps/F8kG1d4sXMSQp1D6A?ref=shouldgo.me">луг Терезы</a> с огромным монументом Баварии. Есть тусовочные кварталы (и ночные пати-автобусы) и просто улицы, по которым бесконечно приятно гулять.
 
 ![](/assets/images/2020/05/IMG_5716.jpg)
 ![](/assets/images/2020/05/IMG_5728.jpg)
 
-
 Менее приятные районы скучкованы вокруг вокзала, где компактно проживают трудовые мигранты и беженцы. В этих частях город больше напоминает столицу Германии и вызывает меньше приятных чувств. Но общего впечатления это не портит.
 
-![](/assets/images/2020/05/IMG_5680.jpg)Мюнхен тоже прекрасно спланирован и обустроен. По моему мнению, это самый сбалансированный из крупных немецких городов.
+![](/assets/images/2020/05/IMG_5680.jpg)
+
+Мюнхен тоже прекрасно спланирован и обустроен. По моему мнению, это самый сбалансированный из крупных немецких городов.
 
 ## Дахау
 В получасе езды от Мюнхена на пригородном поезде U-bahn стоит пасторальный городок <a href="https://goo.gl/maps/YePcXnCaCosX8JYu6?ref=shouldgo.me">Дахау</a> с <a href="https://goo.gl/maps/SXGVUgiYbpFwPK5L7?ref=shouldgo.me">мемориалом</a> одному из самых страшных концлагерей в истории нацистской Германии. Это место впечатляет сильнее известного обоза Аушвиц-Биркенау в польском <a href="../love-poland/index.html">Освенциме</a>.
 
-![](/assets/images/2020/05/IMG_7506.jpg)Дахау был <a href="https://ru.wikipedia.org/wiki/Дахау_(концентрационный_лагерь)?ref=shouldgo.me">одним из первых</a> концентрационных лагерей, по модели которого возводили последующие. Он был построен ещё в 1933 году, задолго до войны. Сначала в нём содержались идеологические преступники, коммунисты, цыгане, гомосексуалисты и уголовники.
+![](/assets/images/2020/05/IMG_7506.jpg)
 
-![](/assets/images/2020/05/IMG_7477.jpg)Позже — евреи, военнопленные и другие жертвы нацистского террора. Всего — почти 200 тысяч человек, которых изнуряли тяжёлой работой, ужасными условиями и античеловеческими медицинскими экспериментами с частым летальным исходом.
+Дахау был <a href="https://ru.wikipedia.org/wiki/Дахау_(концентрационный_лагерь)?ref=shouldgo.me">одним из первых</a> концентрационных лагерей, по модели которого возводили последующие. Он был построен ещё в 1933 году, задолго до войны. Сначала в нём содержались идеологические преступники, коммунисты, цыгане, гомосексуалисты и уголовники.
+
+![](/assets/images/2020/05/IMG_7477.jpg)
+
+Позже — евреи, военнопленные и другие жертвы нацистского террора. Всего — почти 200 тысяч человек, которых изнуряли тяжёлой работой, ужасными условиями и античеловеческими медицинскими экспериментами с частым летальным исходом.
 
 ![](/assets/images/2020/05/DSCF2861.jpg)
 ![](/assets/images/2020/05/DSCF2864.jpg)
-
 
 Американские военные, освободившие лагерь в 1945, были настолько поражены картиной, что убили больше 120 сдавшихся солдат SS, ещё 40 голыми руками разорвали бывшие узники. Один из пулемётчиков открыл прямой огонь по пленным фашистам из тридцатого калибра.
 
 ![](/assets/images/2020/05/DSCF2867.jpg)
 ![](/assets/images/2020/05/DSCF2848.jpg)
 
-
 Немцы не прячут неприятные моменты истории, поэтому в главном корпусе открыт музей, подробно описывающий все ужасы концлагеря. Сохранены два барака узников, газовые печи, крипты и двойной периметр колючки. Вход на территорию и в музей — бесплатный.
 
-![](/assets/images/2020/05/DSCF2863-1.jpg)Я провёл в Дахау весь световой день и увёз с собой горький привкус бессилия и несправедливости. Я не самый впечатлительный человек, но даже когда пишу эти строки, очень тяжело держать слёзы и глотать ком, навсегда застрявший где-то под кадыком.
+![](/assets/images/2020/05/DSCF2863-1.jpg)
+
+Я провёл в Дахау весь световой день и увёз с собой горький привкус бессилия и несправедливости. Я не самый впечатлительный человек, но даже когда пишу эти строки, очень тяжело держать слёзы и глотать ком, навсегда застрявший где-то под кадыком.
 
 ## Фюссен, Швангау, Нойшванштайн
 Противоположный опыт — визит в «диснеевский» замок <a href="https://ru.wikipedia.org/wiki/Нойшванштайн?ref=shouldgo.me">Нойшванштайн</a>. Он находится у подножия Альпов в коммуне <a href="https://goo.gl/maps/epowFzxGV8FgQTot7?ref=shouldgo.me">Швангау</a> неподалёку от живописного городка Фюссен. До него можно добраться за пару часов прямым поездом с <a href="https://goo.gl/maps/i3z2QYFtiHyM3gWR7?ref=shouldgo.me">мюнхенского хауптбанхофа</a>.
 
-![](/assets/images/2020/05/DSCF2908.jpg)Сам замок Нойшванштайн — фантазия инфантильного короля Людвига II. Истории за замком мало — он построен по капризу монаршей особы в конце XIX века на месте руин двух крепостей. Выдержан в средневековом стиле, пропущенном через призму романтизма.
+![](/assets/images/2020/05/DSCF2908.jpg)
+
+Сам замок Нойшванштайн — фантазия инфантильного короля Людвига II. Истории за замком мало — он построен по капризу монаршей особы в конце XIX века на месте руин двух крепостей. Выдержан в средневековом стиле, пропущенном через призму романтизма.
 
 ![](/assets/images/2020/05/DSCF2942.jpg)
 ![](/assets/images/2020/05/IMG_7415.jpg)
-
 
 Король провёл в замке всего 172 дня, после чего скоропостижно преставился. Проект был настолько амбициозным, что стройка вылезла из всех бюджетов и дедлайнов, ввергла коммуну в долги и не была полностью завершена по первоначальному макету.
 
@@ -135,26 +145,30 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/DSCF2951.jpg)
 ![](/assets/images/2020/05/DSCF2955.jpg)
 ![](/assets/images/2020/05/IMG_7435.jpg)
+![](/assets/images/2020/05/DSCF2932.jpg)
 
-
-![](/assets/images/2020/05/DSCF2932.jpg)Городок <a href="https://goo.gl/maps/CWPCXtwhAHPeo6Fv8?ref=shouldgo.me">Фюссен</a>, из которого отбывает обратный поезд, тоже до рези в глазах красив и дразнит вычурными сграфитто своих фасадов. Это место, где хочется замереть и перестать жить в том ритме, к которому тебя приучила цивилизация.
+Городок <a href="https://goo.gl/maps/CWPCXtwhAHPeo6Fv8?ref=shouldgo.me">Фюссен</a>, из которого отбывает обратный поезд, тоже до рези в глазах красив и дразнит вычурными сграфитто своих фасадов. Это место, где хочется замереть и перестать жить в том ритме, к которому тебя приучила цивилизация.
 
 ## Нюрнберг
 Второй по численности город Баварии и столица Франконии. Именно такими представляешь себе немецкие города до первого визита в Германию. Готика красного кирпича, фахверковые постройки, извилистые улочки и башенки городской крепости.
 
-![](/assets/images/2020/05/1A2F2A9A-109C-4233-9120-C55862B65239_1_105_c.jpg)![](/assets/images/2020/05/IMG_3551.jpg)
+![](/assets/images/2020/05/1A2F2A9A-109C-4233-9120-C55862B65239_1_105_c.jpg)
+![](/assets/images/2020/05/IMG_3551.jpg)
 ![](/assets/images/2020/05/IMG_3631.jpg)
-
 
 Даже Адольф Гитлер считал Нюрнберг и его архитектуру воплощением германской культуры. Здесь прошёл первый съезд партии НСДАП и здесь же на знаменитом <a href="https://ru.wikipedia.org/wiki/Нюрнбергский_процесс?ref=shouldgo.me">Нюрнбергском процессе</a> судили главных нацистских преступников: Геринга, Бормана, Риббентропа и других.
 
-![](/assets/images/2020/05/IMG_3629.jpg)Здесь же в 1935 году по проекту главного нацистского архитектора Альберта Шпеера начали возводить <a href="https://ru.wikipedia.org/wiki/Территория_съездов_НСДАП_в_Нюрнберге?ref=shouldgo.me">огромный комплекс для съездов НСДАП</a>. Стройку так и не завершили, но даже в законсервированном виде <a href="https://goo.gl/maps/1pJ58k7HRDv3k815A?ref=shouldgo.me">Зал Собраний</a> поражает своим масштабом.
+![](/assets/images/2020/05/IMG_3629.jpg)
 
-![](/assets/images/2020/05/IMG_3627.jpg)![](/assets/images/2020/05/IMG_3625.jpg)Примерно так же (но несоизмеримо более приятно) своим масштабом удивляет местные рождественские ярмарки — одни из крупнейших в Германии. Каждый год на них съезжается больше двух миллионов туристов. И кажется, что все они собираются на <a href="https://goo.gl/maps/oP9b9UQU9NYALTDN7?ref=shouldgo.me">Хауптмаркте</a>.
+Здесь же в 1935 году по проекту главного нацистского архитектора Альберта Шпеера начали возводить <a href="https://ru.wikipedia.org/wiki/Территория_съездов_НСДАП_в_Нюрнберге?ref=shouldgo.me">огромный комплекс для съездов НСДАП</a>. Стройку так и не завершили, но даже в законсервированном виде <a href="https://goo.gl/maps/1pJ58k7HRDv3k815A?ref=shouldgo.me">Зал Собраний</a> поражает своим масштабом.
+
+![](/assets/images/2020/05/IMG_3627.jpg)
+![](/assets/images/2020/05/IMG_3625.jpg)
+
+Примерно так же (но несоизмеримо более приятно) своим масштабом удивляет местные рождественские ярмарки — одни из крупнейших в Германии. Каждый год на них съезжается больше двух миллионов туристов. И кажется, что все они собираются на <a href="https://goo.gl/maps/oP9b9UQU9NYALTDN7?ref=shouldgo.me">Хауптмаркте</a>.
 
 ![](/assets/images/2020/05/IMG_3611.jpg)
 ![](/assets/images/2020/05/IMG_3643.jpg)
-
 
 ![](/assets/images/2020/05/IMG_3604.jpg)Почему-то Нюрнберг запомнился мне меньше прочих немецких городов и не оставил однозначного впечатления. Но посетить его стоит.
 
@@ -166,7 +180,6 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/IMG_1983.jpg)
 ![](/assets/images/2020/05/IMG_1930-1.jpg)
 
-
 После войны город был почти полностью разрушен, но в отличие от Мюнхена власти восстановили лишь несколько исторических архитектурных групп. Остальное застроили высотками, за что город получил неофициальный топоним Майнхеттен (Манхеттен на Майне).
 
 ![](/assets/images/2020/05/IMG_1965.jpg)
@@ -174,29 +187,29 @@ image: /assets/images/2020/05/DSCF3085.jpg
 ![](/assets/images/2020/05/IMG_3657.jpg)
 ![](/assets/images/2020/05/IMG_1976-1.jpg)
 
-
 Самый высокий небоскрёб — <a href="https://goo.gl/maps/hEeLppecQhJo2GeA7?ref=shouldgo.me">Коммерцбанк Турм</a> высотой 259 метров. За панорамой можно вознестись на <a href="https://goo.gl/maps/7BoQ462Aie6og4q2A?ref=shouldgo.me">Майн Тауер</a> — двухсотметровую стекляшку с лифтами, которые движутся на закладывающей уши скорости около 7 метров в секунду.
 
-![](/assets/images/2020/05/IMG_3650.jpg)![](/assets/images/2020/05/IMG_3654-2.jpg)Город живёт за счёт банков и логистики. После войны власти старательно улучшали транспортную инфраструктуру и сделали Франкфурт европейской логистической столицей. Высокий уровень преступности связан как раз с большим потоком контрабанды.
+![](/assets/images/2020/05/IMG_3650.jpg)
+![](/assets/images/2020/05/IMG_3654-2.jpg)
+
+Город живёт за счёт банков и логистики. После войны власти старательно улучшали транспортную инфраструктуру и сделали Франкфурт европейской логистической столицей. Высокий уровень преступности связан как раз с большим потоком контрабанды.
 
 ![](/assets/images/2020/05/IMG_1872.jpg)
 ![](/assets/images/2020/05/IMG_1812.jpg)
 ![](/assets/images/2020/05/IMG_1914.jpg)
 ![](/assets/images/2020/05/65EBB2B7-0F72-47FA-9D17-C5203DB7CE20_1_105_c.jpg)
 
-
 Если вас не впечатляют небоскрёбы, огромные вокзалы и аэропорты, люксовые кабриолеты, люди в дорогих костюмах, взвинченные цены, а также засилье иммигрантов и наркобарыг — делать во Франкфурте практически нечего. Я расставался с городом без сожалений.
 
 ## Дрезден
-В Дрездене я тоже побывал ещё в 2012 году. Вернулся шесть лет спустя, но ничего не изменилось. Это всё такой же маленький городок с красивым целиком восстановленным историческим центром и богатым панельным наследием ГДР. Всё описано в старом посте.
+В Дрездене я тоже побывал ещё в 2012 году. Вернулся шесть лет спустя, но ничего не изменилось. Это всё такой же маленький городок с красивым целиком восстановленным историческим центром и богатым панельным наследием ГДР. Всё описано [в старом посте](/blog/dresden-dolls/).
 
-<ul><li><a href="../dresden-dolls/index.html">Дрезден со всех сторон</a></li></ul>Не имею добавить ничего интересного кроме горстки свежих фото, и поэтому спешно завершу свой пост, чтоб успеть отрефлексировать всё написанное по случаю недавнего семидесятипятилетия победы.
+Не имею добавить ничего интересного кроме горстки свежих фото, и поэтому спешно завершу свой пост, чтоб успеть отрефлексировать всё написанное по случаю недавнего семидесятипятилетия победы.
 
 ![](/assets/images/2020/05/DSCF3260.jpg)
 ![](/assets/images/2020/05/DSCF3266.jpg)
-![](/assets/images/2020/05/0D85FD8F-997F-4BB6-81F6-BC6AADD9FDEB_1_105_c.jpg)
 ![](/assets/images/2020/05/DSCF3284-1.jpg)
-
 
 Всех поздравляю с этим важным праздником и приглашаю в Германию, чтобы своими глазами увидеть, какой стала эта уничтоженная двумя войнами и разорванная двумя политическими полюсами страна.
 
+![](/assets/images/2020/05/0D85FD8F-997F-4BB6-81F6-BC6AADD9FDEB_1_105_c.jpg)
