--- a/_posts/2010-10-04-sosisnik.markdown
+++ b/_posts/2010-10-04-sosisnik.markdown
@@ -1,27 +1,19 @@
 ---
 layout: post
-title: Сенсация!
+title: Фотки с сосисника
 date: '2010-10-04 22:31:00'
 tags:
-- photoblog
-image: /assets/images/2017/10/3c701f10c162e63ad6fcc3daf5a09945.jpg
+- photo
+- friends
+image: /assets/images/2017/10/IMG_3552.jpg
 ---
 
-Хуевый фотограф внезапно обрел себя в совершенно неожиданной сфере — алкоголизме. Поэтому,&nbsp;фоточки — говно, сосисник — говнище и трололо, а пиво было хорошее, ребята тоже вообще ребята:
+Хуевый фотограф внезапно обрел себя в совершенно неожиданной сфере — алкоголизме. Поэтому,&nbsp;фоточки — говно, сосисник — говнище и трололо, а пиво было хорошее, ребята тоже вообще ребята.
 
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/3c701f10c162e63ad6fcc3daf5a09945.jpg)
-
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/IMG_3563.jpg)
-
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/b244a8075bd021c5ff8efe9e7a3a50bd.jpg)
-
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/IMG_3552.jpg)
-
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/20e751d0f389a2b34d54be9dc8266531.jpg)
-
-![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/b244a8075bd021c5ff8efe9e7a3a50bd-1.jpg)
-
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/160c83206949d830629b306642aed55b.jpg)
-
 ![Осенний сосисник Телента 2010, Дмитрий Афонин](/assets/images/2017/10/IMG_3607.jpg)
-
