--- a/_posts/2012-11-24-prague-t.markdown
+++ b/_posts/2012-11-24-prague-t.markdown
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Прага, часть 1 — типс энд трикс
+title: Прага — типс энд трикс
 date: '2012-11-24 00:53:00'
 tags:
 - travel
 - europe
-image: /assets/images/2017/09/IMG_1268.jpg
+image: /assets/images/2017/09/IMG_1135.jpg
 ---
 
 Будучи пару лет подряд лишенными нормального отпуска, мы планировали махнуть в солнечную Калифорнию (записаться, наконец, на службу в госдеп), но как-то не удалось.
@@ -25,7 +25,6 @@ image: /assets/images/2017/09/IMG_1268.jpg
 Уже по пути от Староместкой до Подольской набережной мы поняли, что Прагу можно описать тремя буквами: ЗБС. Но как то не хочется преждевременно заканчивать псто, поэтому, покажем вам наш отель, который не совсем отель, а [ботель (лодкотель) Рацек](http://www.booking.com/hotel/cz/racek.ru.html?aid=315714;label=hotel-77006-cz-dOo0qJ8mStXIUiBMmOQ*jgS1387707716:pl:ta:p1:p2:ac:ap1t1:neg;ws=&gclid=CNeqtJWe5rMCFUpb3godFDMAnw). Номера маленькие, вифи только в холле, завтраки скудные, но всё окупается забавным экспириенсом проживания в лодке, расположением в хорошем районе и низкой ценой (60 евро за двоих на три ночи).
 
 ![Ботель Расек, Прага, 2012](/assets/images/2017/09/IMG_3417.JPG)
-
 ![Ботель Расек, Прага, 2012](/assets/images/2017/09/IMG_3419.JPG)
 
 ## Прага для пражцев
@@ -33,7 +32,6 @@ image: /assets/images/2017/09/IMG_1268.jpg
 Кинув кепку в отеле, мы тут же погнали смотреть легендарные пражские достопримечательности. Я сразу понял, что смотреть тут можно с одинаковым успехом во все стороны, при том степень разинутости рта будет варьироваться незначительно. И это очень плохая новость, если ты фотограф, потому как потенциальным объектом съемки является вообще всё, а сфотографировать всё нельзя. Но даже если попробуете, получится примерно такое же говно, как у нас. Такие дела.
 
 ![Знаменитые рыжие крыши, Прага, 2012](/assets/images/2017/09/IMG_1233.jpg)
-
 ![Вышеград, Прага, 2012](/assets/images/2017/09/IMG_1263.jpg)
 
 Осенью в Европе вечереет очень рано. Уже в половине пятого на отдельных отрезках Праги можно смело выкалывать оба глаза чем-нибудь острым — разница будет заметна только на следующее утро. Иллюминации даже на крайне заметных поинтах часто не хватает. Поэтому если у вас за окном Прага, а на календаре — новемба, стремглав бегите смотреть на всё подряд. Людей на улицах по вечерам тоже на удивление мало (если не брать в расчет Карлов мост и [Пражский град](http://en.wikipedia.org/wiki/Prague_Castle)). От этого порой становится как то не по себе, но это идет на пользу мстн атмсфр.
@@ -55,7 +53,6 @@ image: /assets/images/2017/09/IMG_1268.jpg
 Еще в Праге очень много водных птиц (чаек, уток, лебедей и каких-то диковинных черных плавающих куриц с белыми носами), лодок (в том числе и убитых деревянных корыт, с которых оче любят рыбачить местные старики), китайских ресторанов, абсент-сторов, людей с собаками, причудливых детских площадок, социальных объектов, парков, беззаботных пенсионеров, трамваев (другого транспорта в центре вообще нет) и лавок с изделиями из Authentic [Bohemian Crystals](http://en.wikipedia.org/wiki/Bohemian_glass), в которых, на самом деле, продается вообще все, от толстовок с символикой города до метизов и саморезов россыпью.
 
 ![Лодочный причал, Прага, 2012](/assets/images/2017/09/IMG_1114.jpg)
-
 ![Осенняя Влтава, Прага, 2012](/assets/images/2017/09/IMG_1146.jpg)
 
 ## Прага гастрономическая
@@ -78,14 +75,14 @@ image: /assets/images/2017/09/IMG_1268.jpg
 
 ![Лестница, Прага 2012](/assets/images/2017/09/IMG_3442.JPG)
 
-**Читайте остальные посты из нашего евротрипа 2012:**
-
-- [ПраЖЖе, часть 2 — веселые картинки](http://shouldgo.ru/prague-sights/ "ПраЖЖе, часть 2 — веселые картинки")
-- [Дрезден со всех сторон. То есть с одной](http://shouldgo.ru/dresden-dolls/ "Дрезден со всех сторон. То есть с одной")
-- [Их бин ейн Берлинер! Типс энд трикс](http://shouldgo.ru/berlin-tt/ "Их бин ейн Берлинер! Типс энд трикс")
-- [Их бин ейн Берлинер! Достопримечательности](http://shouldgo.ru/berlin-sights/ "Их бин ейн Берлинер! Достопримечательности")
-- [Гамбург. Портовый город портовый во всем](http://shouldgo.ru/hamburg-ers/ "Гамбург. Портовый город портовый во всем")
-- [Амстердам. Самый скучный город на нашем пути](http://shouldgo.ru/amsterdamster/ "Амстердам. Самый скучный город на нашем пути")
-- [Брюгге. Всем залечь на днищеБрюгге. Всем залечь на днище](http://shouldgo.ru/in-bruges/ "Брюгге. Всем залечь на днище")
-- [Крумлов. Мать деревень чешских](http://shouldgo.ru/cesky-krumlov/)
-- [Прага. The end of the line](http://shouldgo.ru/praga-the-end/ "Прага. The end of the line")
+## Читайте остальные посты евротрипа:
+- [Прага — путёвые советы](/blog/prague-t/)
+- [Прага — веселые картинки](/blog/prague-sights/)
+- [Прага — конечная станция](/blog/praga-the-end/)
+- [Дрезден со всех сторон](/blog/dresden-dolls/)
+- [Берлин — путёвые советы](/blog/berlin-tt/)
+- [Берлин — достопримечательности](/blog/berlin-sights/)
+- [Гамбург — портовый во всем](/blog/hamburg-ers/)
+- [Амстердам — мой самый скучный пост](/blog/amsterdamster/)
+- [Брюгге — как залечь на дно](/blog/in-bruges/)
+- [Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
