--- a/_posts/2012-12-09-berlin-tt.markdown
+++ b/_posts/2012-12-09-berlin-tt.markdown
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: Их бин ейн Берлинер! Приезжаем в Берлин
+title: Берлин — путёвые советы
 date: '2012-12-09 10:41:00'
 tags:
 - travel
 - europe
-image: /assets/images/2017/09/IMG_1558.jpg
+image: /assets/images/2017/09/brln0-1.jpg
 ---
 
 Если нас попросят коротко и исчерпывающе описать Берлин, получится примерно следующее.
@@ -23,7 +23,6 @@ image: /assets/images/2017/09/IMG_1558.jpg
 Пахнет в Берлине, в основном, от реки [Шпрее](http://en.wikipedia.org/wiki/Spree). Сам город тоже не отличается стерильностью, присущей другим европейским мегаполисам, но на набережных всегда можно услышать особый устойчивый запах падали. Почему — загадка. В более водных Амстердаме и Брюгге пахло исключительно Европой. Спишем всё это на действительно огромные размеры города, ввиду которых уследить за всем у муниципальных властей просто не получается.
 
 ![Закат на Шпрее, Берлин, 2012](/assets/images/2017/09/IMG_1447.jpg)
-
 ![Трущобы, Берлин, 2012](/assets/images/2017/09/IMG_1521.jpg)
 
 Помимо огромных размеров, ориентироваться на местности мешает еще и нетривиальная структура улиц. Пробыв в Берлине три дня, мы так и не научились находить правильную дорогу даже в собственном районе, а дойти до [Рейхстага](http://en.wikipedia.org/wiki/Reichstag_(building)) было настоящей проблемой. Не понимаю, как наши деды брали Берлин без жэпээса и оффлайновых карт [Smart Maps — Berlin](https://itunes.apple.com/us/app/smart-maps-berlin/id325300423?mt=8).
@@ -67,23 +66,21 @@ image: /assets/images/2017/09/IMG_1558.jpg
 Быть счастливым пешеходом мешают не только огромные размеры столицы, но и повсеместные стройки, безжалостно откусывающие даже у самых центральных улиц целые куски пешеходных зон. Берлин — это город-стройка. Пройти десять метров и не встретить обнесенную забором яму, наполненную техникой немецкой фирмы [Liebherr](http://www.liebherr.com/) — это искусство. Видимо, только на этом местные гиды и зарабатывают – достопримечательностей здесь не так много.
 
 ![Берлин, 2012](/assets/images/2017/09/brln2.jpg)
-
 ![Панорама, Берлин, 2012](/assets/images/2017/09/IMG_3577.JPG)
 
 Большинство сайтсиингов, само собой, связаны со Второй Мировой, советской оккупацией и Берлинской Стеной. Увидеть их обязательно нужно – энергетика у исторических точек Берлина сильнее всего, что мы видели до и после. Но подробности мы расскажем только в следующем псто : )
 
 ![Брандербургские ворота, Берлин, 2012](/assets/images/2017/09/brln0-1.jpg)
-
 ![Заработал бедж в фосквере, Берлин, 2012](/assets/images/2017/09/IMG_3651.JPG)
 
-**Читайте остальные посты из нашего евротрипа 2012:**
-
-- [ПраЖЖе, часть 1 — типс энд трикс](http://shouldgo.ru/prague-t/ "ПраЖЖе, часть 1 — типс энд трикс")
-- [ПраЖЖе, часть 2 — веселые картинки](http://shouldgo.ru/prague-sights/ "ПраЖЖе, часть 2 — веселые картинки")
-- [Дрезден со всех сторон. То есть с одной](http://shouldgo.ru/dresden-dolls/ "Дрезден со всех сторон. То есть с одной")
-- [Их бин ейн Берлинер! Достопримечательности](http://shouldgo.ru/berlin-sights/ "Их бин ейн Берлинер! Достопримечательности")
-- [Гамбург. Портовый город портовый во всем](http://shouldgo.ru/hamburg-ers/ "Гамбург. Портовый город портовый во всем")
-- [Амстердам. Самый скучный город на нашем пути](http://shouldgo.ru/amsterdamster/ "Амстердам. Самый скучный город на нашем пути")
-- [Брюгге. Всем залечь на днищеБрюгге. Всем залечь на днище](http://shouldgo.ru/in-bruges/ "Брюгге. Всем залечь на днище")
-- [Крумлов. Мать деревень чешских](http://shouldgo.ru/cesky-krumlov/)
-- [Прага. The end of the line](http://shouldgo.ru/praga-the-end/ "Прага. The end of the line")
+## Читайте остальные посты евротрипа:
+- [Прага — путёвые советы](/blog/prague-t/)
+- [Прага — веселые картинки](/blog/prague-sights/)
+- [Прага — конечная станция](/blog/praga-the-end/)
+- [Дрезден со всех сторон](/blog/dresden-dolls/)
+- [Берлин — путёвые советы](/blog/berlin-tt/)
+- [Берлин — достопримечательности](/blog/berlin-sights/)
+- [Гамбург — портовый во всем](/blog/hamburg-ers/)
+- [Амстердам — мой самый скучный пост](/blog/amsterdamster/)
+- [Брюгге — как залечь на дно](/blog/in-bruges/)
+- [Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
