--- a/_posts/2013-03-10-in-bruges.markdown
+++ b/_posts/2013-03-10-in-bruges.markdown
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Брюгге. Всем залечь на днище
+title: Брюгге — как залечь на дно
 date: '2013-03-10 01:46:00'
 tags:
 - travel
 - europe
-- videos
-image: /assets/images/2017/09/IMG_0013.jpg
+- video
+image: /assets/images/2017/09/IMG_1937.jpg
 ---
 
 Всего в 150 километрах от [Амстердама](http://shouldgo.ru/amsterdamster/ "Амстердам. Самый скучный город на нашем пути") находится город [Антверпен](http://en.wikipedia.org/wiki/Antwerp), куда мы благополучно добрались за пару часов на автобусе от [Eurolines](http://www.eurolines.com/en/).
@@ -39,19 +39,16 @@ image: /assets/images/2017/09/IMG_0013.jpg
 Сегодня, целых три месяца спустя, уже в совершенно другом году, я очень сильно жалею, что мы остановились в этом потрясающем городе всего на сутки. Когда мы покинули здание отеля в день приезда, на улице было совсем темно. И это самое сильное впечатление, которое можно получить от Брюгге. Единственное, что добавило нашей прогулке ложку дегтя — русская речь — ее мы услышали первой, когда шли по узкой и темной брусчатой улочке имени бельгийского средневековья.
 
 ![Церковь божьей матери, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_2025.jpg)
-
 ![Ночной Унгольт, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_2017.jpg)
 
 Дело в том, что до какого-то очень далекого (допустим, XVII) века Брюгге соревновался за столичность с такими городами, как [Брюссель](http://fr.wikipedia.org/wiki/Bruxelles) и [Антверпен](http://en.wikipedia.org/wiki/Antwerp). Близость к крупнейшему порту [Остенде](http://en.wikipedia.org/wiki/Ostend) и куча небольших каналов сделала из Брюгге неплохой торгово-морской хаб. Но потом власти [Фландрии](http://en.wikipedia.org/wiki/West_Flanders) перестали следить за состоянием тех самых каналов, они засорились и всё решительно пошло по езде. Денег у муниципалитета (или как там раньше это называлось) осталось так мало, что не хватило даже на то, чтобы разрушить город, как любят делать в Бельгии. В итоге, город сговнился и тихонько гнил в тени своих соседей Гента и Антверпена, сохраняя неизменный ландшафт и архитектуру, пока кто-то не додумался рассказать об этом миру.
 
 ![Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1977.jpg)
-
 ![Улицы Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1915.jpg)
 
 Я настаиваю и умоляю вас на коленях, отложите свой визит в исторический центр хотя бы до сумерок. Днем в Брюгге очень много туристов, понаехавших посмотреть на совю атмосферу. Ближе к ночи улицы максимально опустеют, и вот тогда вам уже не скрыться от лютой готики местных пейзажей. Совершая променад вдоль одного из каналов, мы с женой словили некислый катарсис, когда шикарная архитектурная подсветка наложила на стены [Церкви Богоматери](http://en.wikipedia.org/wiki/Church_of_Our_Lady,_Bruges) огромные тени проплывающих мимо лебедей. Пережив такую локальную драму вы больше никогда не захотите возвращаться в %название_вашего_мухосранска%, что бы оно вам ни сулило. Меня вот уже три месяца преследует навязчивая идея уехать в Бельгию и готовить на местном [Grote Markt](http://en.wikipedia.org/wiki/Markt_(Bruges)) сосиски, проникаясь ТЛЕНОМ и БЕЗЫСХОДНОСТЬЮ.
 
 ![Ночной Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1903.jpg)
-
 ![Ночной Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_0007.jpg)
 
 ## 366 ступенек и другие достопримечательности
@@ -59,11 +56,8 @@ image: /assets/images/2017/09/IMG_0013.jpg
 Напротив того самого центрального маркта стоит одинокая дилда [Belfort Tower](http://en.wikipedia.org/wiki/Belfry_of_Bruges), дичайше похожая на [подставку для ока Саурона](https://www.google.ru/search?q=Sauron's+eye&hl=en&newwindow=1&client=safari&rls=en&tbm=isch&tbo=u&source=univ&sa=X&ei=d3I7UceTHqiE4ASjsICYCg&ved=0CEMQsAQ&biw=1280&bih=719). В отличие от нашего [Высоцкого](http://ru.wikipedia.org/wiki/%D0%92%D1%8B%D1%81%D0%BE%D1%86%D0%BA%D0%B8%D0%B9_(%D0%BD%D0%B5%D0%B1%D0%BE%D1%81%D0%BA%D1%80%D1%91%D0%B1)), дилда вписывается в архитектурный ансамбль чуть более, чем полностью. С этой самой башни в одной из финальных сцен In Bruges свергся один из главных героев. Чтобы забраться на самый верх вам придется преодолеть 366 ступенек по винтовой лестнице, которая чуть шире ваших плеч. Наверху вас обдаст ветром и обрызгает мелкими каплями ледяной воды, но самое сложное — не скатиться кубарем при спуске. Держитесь крепче за канат, других перил не предусмотрено.
 
 ![Башня Беллфорт, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_2007.jpg)
-
 ![Башня Беллфорт, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1937.jpg)
-
 ![Винтовая лестница на башню Беллфорт, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_0014.jpg)
-
 ![Панорама с башни Беллфорт, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1933.jpg)
 
 > Ray: Do you think this is good?  
@@ -74,15 +68,12 @@ image: /assets/images/2017/09/IMG_0013.jpg
 Сам Брюгге очень мал, и не сказать, что мы не успели увидеть всё за отведенные сутки. Напротив, мы многократно ловили себя на том, что ходим кругами, но черт возьми, этот маленький сукин сын настолько хорош, что тебе всегда хочется еще. ЕЩЕ! Утром следующего дня моросило. И именно в такую погоду следует гулять окрест [Бегинажа](http://www.tripadvisor.com/Attraction_Review-g188671-d243320-Reviews-Beguinage_Begijnhof-Bruges_West_Flanders_Province.html) (в котором, кстати, запрещено разговаривать, так что без страха ведите туда женщину). Серьезно, не ездите в Брюгге летом, в ясную погоду вы испортите себе всё впечатление.
 
 ![Бегинаж, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_0010.jpg)
-
 ![Бегинаж, Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_0017.jpg)
 
 Я не знаю, как свести к минимуму количество восторгов на единицу текста, да и важные детали забылись, пока я проэцсамовался с написанием этого текста. Обязательно скачайте любой систигайд (и купите уже айфон), зайдите на великолепный сайт [visitbruges.be](http://visitbruges.be), запаситесь флягой ирландского, заберитесь на холм с мельницей и заглядывайте в каждую подворотню, оно того стоит. Спешить здесь некуда, время давно остановилось, но пожалуйста, приезжайте больше, чем на сутки. Например, навсегда. Устраивайтесь поудобней в одном из узеньких проулков и начинайте умирать. Не то от синдрома Стендаля, не то от нежелания когда-либо потерять этот момент.
 
 ![Проулки Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1916.jpg)
-
 ![Проулки Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1953.jpg)
-
 ![Проулки Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1942.jpg)
 
 Непременно загляните в бар [Herberg Vlissinghe](http://www.tripadvisor.com/Restaurant_Review-g188671-d1436597-Reviews-Herberg_Vlissinghe-Bruges_West_Flanders_Province.html), который стоит на этом самом месте с 1515 года, но помните, что по понедельникам и вторникам он ГЕСЛОТЕН, как и все остальные пабы в городе. Мы не смогли попасть внутрь, но насладились ПРИЧАСТНОСТЬЮ.
@@ -97,33 +88,30 @@ image: /assets/images/2017/09/IMG_0013.jpg
 - Belfort Tower закрывается чуть ли не в четыре пм, поэтому нам не удалось посмотреть на ночной город с высоты 83 метра, и это тоже фейл, потому что хотелось очень.
 
 ![Улицы Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1918.jpg)
-
 ![Каналы Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_1958.jpg)
-
 ![Каналы Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_2005.jpg)
 
 Алсо, Брюженька оставил после себя полнейшее непонимание, как же правильно: Brugge или Bruges, а так же нарезное видео, снятое трясущимися промокшими руками после фляги вискаря. Видео, от которого мне очень пичально и грустно:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Oy4RMazi0oc?rel=0" frameborder="0" allowfullscreen></iframe>
+<iframe width="920" height="517" src="https://www.youtube.com/embed/Oy4RMazi0oc?rel=0" frameborder="0" allowfullscreen></iframe>
 
 На следующее утро мы с кислыми минами сели на поезд до Антверпена. Брюгге был крайней точкой нашего Евротрипа, дальше нам предстояло [возвращение в Чехию](http://shouldgo.ru/prague-sights/ "ПраЖЖе, часть 2 — веселые картинки"). Доехать из Бельгии до Праги с пятью пересадками на поезде стоил около 450€, поэтому мы послали на все известные буквы бельгийскую РЖД и в очередной раз отдали свои 160€ Евролайнсу за прямой пятнадцатичасовой рейс. 50% пассажиров автобуса были на удивление русские, даже сам водитель свободно говорил на противном родном языке. Сквозь запотевшие окна мы с тоской посмотрели на грязный исламизированный Брюссель и непонятный ночной [Льеж](http://en.wikipedia.org/wiki/Li%C3%A8ge). Затем мы въехали на территорию Германии, где у нас, наконец, появился интернет, еще оставшийся на [Дрезденской](http://shouldgo.livejournal.com/104280.html) симке [Vodafone](http://www.vodafone.com/content/index.html). Проезжая сквозь всю Германию мы полюбовались на потрясающие [Ахен](http://en.wikipedia.org/wiki/Aachen), [Франкфурт](http://en.wikipedia.org/wiki/Frankfurt) и [Нюрнберг](http://en.wikipedia.org/wiki/Nuremberg) (никаких процессов не видели, фашисты летают свободно). Германия очень разная.
 
 ![Покидая Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_0024.jpg)
-
 ![Покидая Брюгге, Бельгия 2012](/assets/images/2017/09/IMG_0114-copy.jpg)
 
 Проехав чешскую [Пльзень](http://en.wikipedia.org/wiki/Plze%C5%88) мы наконец добрались до Праги, где нам предстояло провести еще пять дней и можно было почти ни в чем себе не отказывать. Этого оказалось очень мало, но об этом чуть позже. А пока, пока!
 
 ПС: Читайте множество интересных псто про предыдущие точки нашего путешествия, а я попытаюсь написать про второе пришествие в Прагу, а так же баррочное путешествие в солнечный [Чески Крумлов](http://en.wikipedia.org/wiki/%C4%8Cesk%C3%BD_Krumlov). Более того, я постараюсь сделать это не два месяца спустя, как это получилось с Брюгге.
 
-**Читайте остальные посты из нашего евротрипа 2012:**
-
-- [ПраЖЖе, часть 1 — типс энд трикс](http://shouldgo.ru/prague-t/ "ПраЖЖе, часть 1 — типс энд трикс")
-- [ПраЖЖе, часть 2 — веселые картинки](http://shouldgo.ru/prague-sights/ "ПраЖЖе, часть 2 — веселые картинки")
-- [Дрезден со всех сторон. То есть с одной](http://shouldgo.ru/dresden-dolls/ "Дрезден со всех сторон. То есть с одной")
-- [Их бин ейн Берлинер! Типс энд трикс](http://shouldgo.ru/berlin-tt/ "Их бин ейн Берлинер! Типс энд трикс")
-- [Их бин ейн Берлинер! Достопримечательности](http://shouldgo.ru/berlin-sights/ "Их бин ейн Берлинер! Достопримечательности")
-- [Гамбург. Портовый город портовый во всем](http://shouldgo.ru/hamburg-ers/ "Гамбург. Портовый город портовый во всем")
-- [Амстердам. Самый скучный город на нашем пути](http://shouldgo.ru/amsterdamster/ "Амстердам. Самый скучный город на нашем пути")
-- [Крумлов. Мать деревень чешских](http://shouldgo.ru/cesky-krumlov/)
-- [Прага. The end of the line](http://shouldgo.ru/praga-the-end/ "Прага. The end of the line")
+## Читайте остальные посты евротрипа:
+- [Прага — путёвые советы](/blog/prague-t/)
+- [Прага — веселые картинки](/blog/prague-sights/)
+- [Прага — конечная станция](/blog/praga-the-end/)
+- [Дрезден со всех сторон](/blog/dresden-dolls/)
+- [Берлин — путёвые советы](/blog/berlin-tt/)
+- [Берлин — достопримечательности](/blog/berlin-sights/)
+- [Гамбург — портовый во всем](/blog/hamburg-ers/)
+- [Амстердам — мой самый скучный пост](/blog/amsterdamster/)
+- [Брюгге — как залечь на дно](/blog/in-bruges/)
+- [Крумлов — мать деревень чешских](/blog/cesky-krumlov/)
