--- a/_posts/2021-01-12-2k20.markdown
+++ b/_posts/2021-01-12-2k20.markdown
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: 50 скучных фото из 2020
+title: Полсотни снимков из локдауна
 date: '2021-01-12 20:37:48'
 tags:
-- europe
-- travel
-- photoblog
-- russia
-image: assets/images/2021/01/cover.jpeg
+- yearly
+- photo
+image: /assets/images/2021/01/DSCF4187.jpg
 ---
+
+Год, безусловно, был совершенно всратым, но воспоминаний накопилась куча. Вывалю их прямо здесь, чтобы спустя лета порыться в несвежем содержимом, утирая ностальгическую слезу с поседевших усов.
 
 Лично мне жаловаться не приходится: изоляция прошла в Европе, между волнами заразы были короткие вылазки в соседние страны, годы цифрового номадства отлично подготовили к социальной аскезе и удалёнке, а все дорогие люди без потерь доползли до тазика с новогодним оливье. Короче, всё было сасно, но для порядка придётся немного поныть.
 
@@ -16,47 +16,36 @@ image: assets/images/2021/01/cover.jpeg
 
 2020 начался заурядно. Мы собрали друзей и отправились в «польские Альпы» ака [Татры](https://goo.gl/maps/fPVkFXmUJvpu8XEd7). Ребята катались на лыжах и бордах по высоким горам, а я колесил в синих санях по высоким градусам, поправляя разболтавшееся по случаю зимы настроение. На сдачу мы сняли авто и проведали замки разных стадий разложения, расположенные вдоль [Маршрута Орлиных Гнёзд](https://ru.wikipedia.org/wiki/Путь_Орлиных_Гнёзд).
 
-- ![](/assets/images/2021/01/DSCF1334.jpg)
-- ![](/assets/images/2021/01/DSCF1425.jpg)
-
-
-Новый год в горном курорте Закопане в польских Татрах
+![](/assets/images/2021/01/DSCF1334.jpg)
+![](/assets/images/2021/01/DSCF1425.jpg)
 
 Дальше всё было настолько тухло, что сознание вернулось ко мне лишь в феврале, когда настала пора отправиться в Россию, чтобы продлить рабочие визы и повидать любимых людей из Москвы, Питера и родного Еката. РЖД довёз нас в обе стороны прекрасным поездом Москва — Прага, а сама Родина покатала на русских горках ностальгической меланхолии.
 
-- ![](/assets/images/2021/01/DSCF1696.jpg)
-- ![](/assets/images/2021/01/DSCF1705.jpg)
-
-Никольское кладбище в Санкт-Петербурге — отличная иллюстрация для поездки в Россию
+![](/assets/images/2021/01/DSCF1696.jpg)
+![](/assets/images/2021/01/DSCF1705.jpg)
 
 Самая яркая эмоция поездки — тревожное чувство, которое испытываешь, преодолевая кордоны серых ментов, заборы и рамки металлоискателей на Белорусском вокзале. Эта картина моментально вырывает из нежной еврогейской фантазии и возвращает в суровую действительность, в которой нужно быть начеку и ко всему относиться философски.
 
-- ![](/assets/images/2021/01/IMG_0921.jpg)
-- ![](/assets/images/2021/01/IMG_0964.jpg)
+![](/assets/images/2021/01/IMG_0921.jpg)
+![](/assets/images/2021/01/IMG_0964.jpg)
 
-Самые радостные вещи — подстаканники РЖД и ВНЖ в Польше
-
-По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС]( https://shouldgo.me/love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
+По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС](/blog/love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
 
 ## Побег из Чехии
 
-Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост]( https://shouldgo.me/prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
+Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост](/blog/prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
 
-- ![](/assets/images/2021/01/DSCF1753.jpg)
-- ![](/assets/images/2021/01/DSCF1756.jpg)
-- ![](/assets/images/2021/01/DSCF3376.jpg)
-- ![](/assets/images/2021/01/2C38DB67-F81A-4125-A827-F8CC8C0932A5.jpg)
-
-Весна перед локдауном в Чехии
+![](/assets/images/2021/01/DSCF1753.jpg)
+![](/assets/images/2021/01/DSCF1756.jpg)
+![](/assets/images/2021/01/DSCF3376.jpg)
+![](/assets/images/2021/01/2C38DB67-F81A-4125-A827-F8CC8C0932A5.jpg)
 
 На дворе была середина марта, и ничто не предвещало беды. Коронавирус уже слал приветы во все концы, но по-прежнему казался не страшнее ОРВИ. Мы смеялись над ребятами в масках, тёрлись о китайских туристов на Староместкой и складывали туалетную бумагу в четыре слоя. Пока прекрасным пятничным вечером правительство Чехии не [объявило локдаун](https://www.facebook.com/dima.afonin/posts/10221829944082490).
 
 Ночью мы успели выхватить билеты на последний автобус до Кракова, а уже утром весь международный транспорт отменили. Аренду авто моментально подорожала до €500 в сутки, а единственный выход, который нам предложил добрый сотрудник вокзала — ехать внутренним рейсом до польской границы, а дальше добираться пешком, «если вас пропустят пограничники».
 
-- ![](/assets/images/2021/01/IMG_1154.jpg)
-- ![](/assets/images/2021/01/IMG_1169.jpg)
-
-Экстренная эвакуация из Чехии в Польшу через пешую границу
+![](/assets/images/2021/01/IMG_1154.jpg)
+![](/assets/images/2021/01/IMG_1169.jpg)
 
 Так мы и сделали, совершив [увлекательный шпацер](https://www.facebook.com/dima.afonin/posts/10221843699946378) из милой чешской деревни [Наход](https://goo.gl/maps/neWPMzLsJobcBUX29) в польский спа-курорт [Кудова-Здруй](https://goo.gl/maps/xvEEeKRc7Y9rfRsQ8). Затем были поезда до Клодзко, Вроцлава и автобус до родного Кракова. Всего 14 часов в пути, в ситуации полнейшего хаоса и неопределённости, 15 километров на ногах, двое случайных попутчиков из Армении и Украины. Идеальное приключение.
 
@@ -64,48 +53,37 @@ image: assets/images/2021/01/cover.jpeg
 
 Мы успели проскочить под самый занавес. На следующий день [Польша закрыла границы,](https://www.facebook.com/dima.afonin/posts/10221922263950429) и вернуться стало возможно только через двухнедельный карантин. Страна ввела одни из самых строгих ограничений во всём ЕС: отменила праздные прогулки, обязала носить маски на улице, закрыла общественные места вплоть до детских площадок и ввела часы для шопинга пенсионеров.
 
-- ![](/assets/images/2021/01/DSCF1904.jpg)
-- ![](/assets/images/2021/01/DSCF3571.jpg)
-
-Опустевший Краков во время первой волны
+![](/assets/images/2021/01/DSCF1904.jpg)
+![](/assets/images/2021/01/DSCF3571.jpg)
 
 Краковяки принялись на удивление дисциплинированно соблюдать [все требования и рекомендации](https://www.facebook.com/dima.afonin/posts/10222009897341209), посему первая волна едва доползла до 500 дневных кейсов. Нам же оставалось сидеть дома и радоваться большой зелёной террасе с видом на весну. Поначалу, это было даже интересно — наконец посидеть на жопе после пары лет постоянных переездов.
 
-- ![](/assets/images/2021/01/DSCF2093.jpg)
-- ![](/assets/images/2021/01/IMG_0777.jpg)
-
-Терасса спасла от жёстких ковидных ограничений
+![](/assets/images/2021/01/DSCF2093.jpg)
+![](/assets/images/2021/01/IMG_0777.jpg)
 
 Внезапно появились деньги и время, чтобы облагородить быт маленькими радостями, вроде турника и комфортного рабочего кресла. Затем стало невыносимо скучно, и начались излишества, вроде телевизора и постоянных винных дегустаций (благодаря которым я в совершенстве овладел винным диалектом польского и открыл Weisser Mulatschak и Andert-Wein Rosè).
 
-- ![](/assets/images/2021/01/DSCF1847.jpg)
-- ![](/assets/images/2021/01/DSCF1875.jpg)
-
-Изумительная весна, которую мы пропустили
+![](/assets/images/2021/01/DSCF1847.jpg)
+![](/assets/images/2021/01/DSCF1875.jpg)
 
 К лету ограничения ослабли. Несмотря на это, польское правительство перенесло президентские выборы (за которыми было действительно интересно наблюдать, хотя победил всё равно [кандидат от Единой России](https://www.facebook.com/dima.afonin/posts/10222106771403000)). Российские выборы новой конституции никто не переносил, и мы добросовестно [выразили своё нет](https://www.facebook.com/dima.afonin/posts/10223067168612330), хотя старательно избегали походов в любые общественные места.
 
-- ![](/assets/images/2021/01/DSCF2031.jpg)
-- ![](/assets/images/2021/01/DSCF2756.jpg)
-- ![](/assets/images/2021/01/DSCF2195.jpg)
-- ![](/assets/images/2021/01/DSCF3426.jpg)
-
-Жаркое краковское лето
+![](/assets/images/2021/01/DSCF2031.jpg)
+![](/assets/images/2021/01/DSCF2756.jpg)
+![](/assets/images/2021/01/DSCF2195.jpg)
+![](/assets/images/2021/01/DSCF3426.jpg)
 
 Вторая волна началась в сентябре и докатилась до куда более удручающих 30 тысяч выявленных случаев в день. Польша со скрипом переварила такой наплыв заболевших, ограничения вернулись, и мы до сих пор лишены всех благ культурно-социального досуга, в том числе прогулок по улице без приросших к лицу масок и поездок в соседние страны.
 
-- ![](/assets/images/2021/01/DSCF3634.jpg)
-- ![](/assets/images/2021/01/DSCF3521.jpg)
-- ![](/assets/images/2021/01/DSCF3495.jpg)
-- ![](/assets/images/2021/01/DSCF3798.jpg)
-
-Затяжная краковская осень длится с октября до декабря
+![](/assets/images/2021/01/DSCF3634.jpg)
+![](/assets/images/2021/01/DSCF3521.jpg)
+![](/assets/images/2021/01/DSCF3495.jpg)
+![](/assets/images/2021/01/DSCF3798.jpg)
 
 Весна в Кракове была изумительной — весь апрель цвели вишня, сакура и крокусы. Лето было долгим и жарким. Золотая осень плавно текла с октября по ноябрь. Но в декабре наступила мрачная срань с туманами, дождями и непроницаемым серым смогом. Снег так и не выпал, а мы впервые начали грустить, что город такой тихий и тесный.
 
-- ![](/assets/images/2021/01/DSCF3851.jpg)
-- ![](/assets/images/2021/01/DSCF3664-1.jpg)
-Единственное развлечение зимой 2020 — смотреть в бездну
+![](/assets/images/2021/01/DSCF3851.jpg)
+![](/assets/images/2021/01/DSCF3664-1.jpg)
 
 По какой-то одному Зевсу известной причине год выдался абсолютно всратым не только в смысле пандемической ебанины, но и в плане производства и потребления контента. Вспомнить практически нечего, остаётся только зарыть здесь эту текстовографическую капсулу времени с самым унылым в мире [топом книжек, фильмов, игр, песенок и подкастов](https://www.facebook.com/dima.afonin/posts/10224569826377835).
 
@@ -123,57 +101,44 @@ image: assets/images/2021/01/cover.jpeg
 
 Несмотря на всё, мы успели посетить несколько старых и новых мест. Летом, пока внутренние границы ЕС были открыты, слетали на постковидную Сицилию. Сам остров показался грязным, враждебным и скучным (особенно [Катанья](https://goo.gl/maps/ByDR4ZDHLyB8PeE67), в которой мы имели глупость остановиться). Несколько раз было реально тревожно за свою безопасность.
 
-- ![](/assets/images/2021/01/DSCF2779.jpg)
-- ![](/assets/images/2021/01/DSCF2870.jpg)
-- ![](/assets/images/2021/01/DSCF2900.jpg)
-- ![](/assets/images/2021/01/DSCF2945.jpg)
-
-Сицилия — далеко не лучшее место для отдыха в Италии
+![](/assets/images/2021/01/DSCF2779.jpg)
+![](/assets/images/2021/01/DSCF2870.jpg)
+![](/assets/images/2021/01/DSCF2900.jpg)
+![](/assets/images/2021/01/DSCF2945.jpg)
 
 Однако, соскучившиеся по туристам итальянцы немного разбавили картину. Особенно сторож замка [Ачи-Кастелло](https://goo.gl/maps/h2CFyyLw8MAm7HHQ6), который читал нам Бродского на итальянском и слушал мои декламации на русском, после чего называл нас исключительно Иосифом и Мариной. Прекрасная сицилийская кухня тоже оставила неизгладимый гастрономический след.
 
-- ![](/assets/images/2021/01/DSCF2790.jpg)
-- ![](/assets/images/2021/01/DSCF2911.jpg)
-
-В ковидные времена радуешься даже такому
+![](/assets/images/2021/01/DSCF2790.jpg)
+![](/assets/images/2021/01/DSCF2911.jpg)
 
 В августе навестили друзей на Кипре. Остров давно стал родным, поэтому, вместо повторного осмотра всех достопримечательностей, мы грели кости на пляжах, дрифтили на вжареной бэхе, коллективно смотрели ютуб и переживали за ребят из Беларуси. Едва успели вернуться в Краков, как Кипр ввёл новый локдаун и ограничил авиасообщение.
 
-- ![](/assets/images/2021/01/DSCF3039.jpg)
-- ![](/assets/images/2021/01/DSCF3083.jpg)
-- ![](/assets/images/2021/01/DSCF3152.jpg)
-- ![](/assets/images/2021/01/IMG_3743.jpg)
-
+![](/assets/images/2021/01/DSCF3039.jpg)
+![](/assets/images/2021/01/DSCF3083.jpg)
+![](/assets/images/2021/01/DSCF3152.jpg)
+![](/assets/images/2021/01/IMG_3743.jpg)
 
 Затем ещё раз съездили в Прагу (потому что нашли копеечные билеты в железнодорожном вагоне первого класса). Открыли для себя маленький город [Оломоуц](https://goo.gl/maps/hc9v5pESexHtfGjz5) в Моравии, а также поделённый между Чехией и Польшей [Цешин](https://goo.gl/maps/GnYqN5Yvpf23ArhaA), границу в котором можно пересечь прямо по пешеходному мосту (экспириенс интересный, но город довольно унылый).
 
-- ![](/assets/images/2021/01/DSCF2753.jpg)
-- ![](/assets/images/2021/01/DSCF2656.jpg)
-- ![](/assets/images/2021/01/DSCF3459.jpg)
-- ![](/assets/images/2021/01/IMG_4006.jpg)
-
-Оломуц и Цешин — путешествия выходного дня
+![](/assets/images/2021/01/DSCF2753.jpg)
+![](/assets/images/2021/01/DSCF2656.jpg)
+![](/assets/images/2021/01/DSCF3459.jpg)
+![](/assets/images/2021/01/IMG_4006.jpg)
 
 Под конец года, когда все границы снова закрылись, нашёлся повод отведать ещё немного Польши. Встретили день моего рождения в том же горном курорте [Закопане](https://goo.gl/maps/mduqpuN29gkDjbnJ7), где начался наш 2020. Заехали в [Бельско-Бялу](https://goo.gl/maps/aYLRDeRYmY6B9awj8) (самое ушатанное место в стране соу фар) и [Катовице](https://goo.gl/maps/kDFUbjAvhXXfJSCn7) (столица заводов, хипстеров и киберспортивных турниров на западе Польши).
 
-- ![](/assets/images/2021/01/DSCF3864.jpg)
-- ![](/assets/images/2021/01/DSCF3981.jpg)
-
-Морозные Закопане и солнечная Бельско-Бяла
+![](/assets/images/2021/01/DSCF3864.jpg)
+![](/assets/images/2021/01/DSCF3981.jpg)
 
 Новый год, впервые лет за десять, отметили дома (правительство ввело комендантский час) — с салатиками и телевизором. А после отправились в [Гданьск](https://goo.gl/maps/GWs7wnXSyBRmADgP7) — город на Балтике, который внезапно стал [главным туристическим впечатлением](https://www.facebook.com/dima.afonin/posts/10224608344020752) последних лет и однозначно лучшим местом для утоления культурно-эстетической жажды во всей Польше.
 
-- ![](/assets/images/2021/01/DSCF4031.jpg)
-- ![](/assets/images/2021/01/DSCF4046.jpg)
-
-Хорошие улицы Гданьска
+![](/assets/images/2021/01/DSCF4031.jpg)
+![](/assets/images/2021/01/DSCF4046.jpg)
 
 Большую часть истории город кочевал от поляков к немцам, в результате чего разжился архитектурой, слабо напоминающей среднестатистическую польскую провинцию. К 1945 примерно 80% построек были срыты в ноль, но, в отличие от других городов, исторический центр восстановили очень аккуратно и почти целиком.
 
-- ![](/assets/images/2021/01/DSCF4063.jpg)
-- ![](/assets/images/2021/01/DSCF4225.jpg)
-
-Нехорошие улицы Гданьска
+![](/assets/images/2021/01/DSCF4063.jpg)
+![](/assets/images/2021/01/DSCF4225.jpg)
 
 Осмотрели подавляюще массивную [Мариацкую Базилику](https://ru.wikipedia.org/wiki/Церковь_Девы_Марии_(Гданьск)) — второй по размерам (после Кёльнского) и крупнейший кирпичный храм Европы, крупнейший же и настолько же кирпичный средневековый [замок Тевтонского Ордена](https://ru.wikipedia.org/wiki/Мариенбург_(замок)) в [Мальборке](https://goo.gl/maps/Q3TWg1uD3oPGztWo9) и прочую готику вперемежку с фахверком, барокко и фасадно-архитектурными ансамблями имени скандинавского минимализма.
 
@@ -181,15 +146,13 @@ image: assets/images/2021/01/cover.jpeg
 
 ![](/assets/images/2021/01/DSCF4187.jpg)
 
-Пляж Сопота
-
 Кроме непосредственно поездок, успел написать пяток неплохих фотобылин о путешествиях по Европе, которые случились в прошлой жизни:
 
-- [Как я жил в Праге и путешествовал по Чехии]( https://shouldgo.me/prague-czechia/)
-- [Как я путешествовал по Италии, когда это ещё не звучало дико]( https://shouldgo.me/italia/)
-- [Маленькое путешествие по Франции]( https://shouldgo.me/petite-france/)
-- [75 фотографий из Германии]( https://shouldgo.me/germania-75/)
-- [Как я влюбился и переехал в Польшу]( https://shouldgo.me/love-poland/)
+- [Как я жил в Праге и путешествовал по Чехии](/blog/prague-czechia/)
+- [Как я путешествовал по Италии, когда это ещё не звучало дико](/blog/italia/)
+- [Маленькое путешествие по Франции](/blog/petite-france/)
+- [75 фотографий из Германии](/blog/germania-75/)
+- [Как я влюбился и переехал в Польшу](/blog/love-poland/)
 
 ## Вернулись назад в 2021
 
@@ -199,6 +162,6 @@ image: assets/images/2021/01/cover.jpeg
 
 Очень надеюсь написать об этом в следующем годовом посте. До встречи!
 
-- [50 фотографий из 2019]( https://shouldgo.me/2020/)
-- [50 фотокарточек из 2k18]( https://shouldgo.me/2k18/)
-- [2017 в фотографиях]( https://shouldgo.me/2017-in-50-photos/)
+- [50 фотографий из 2019](/blog/2020/)
+- [50 фотокарточек из 2k18](/blog/2k18/)
+- [2017 в фотографиях](/blog/2017-in-50-photos/)
